NIAD-969: Address code review comments - Remove redundant local variables in PerformerNameAndAddress - Simplify if conditions - Test mapper when there is no performer practitioner - Test mapping to bundle without performer practitioner